--- a/main.css
+++ b/main.css
@@ -1,23 +1,31 @@
 
 .grid{
     display: grid;
-    grid-template-columns: repeat(4, 1fr); /*palabra clave para repeter la fraccion equivalente por la cantidad indicada antes de la coma*/
+    grid-template-columns: repeat(3, 1fr); /*palabra clave para repeter la fraccion equivalente por la cantidad indicada antes de la coma*/
     gap: 1em;
-    grid-template-rows: minmax(20px, auto);
-    
+    grid-auto-rows: minmax(100px, auto); 
    
+    align-items: stretch; /*cuando hablamos de un estilo aplicar en la columna/fila entera debemos aplicar este o justify-items*/
 }
-.nested-grid{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: 100px;
-    gap: 1em;
+.element-one{
+    align-self: start;
 }
-.nested-grid >div{
-    border: 1px solid #000;
-    background-color: #f1c40f;
-    padding: 1em;
+.element-two{
+    align-self: center;
 }
+.element-three{
+    align-self: end;
+}
+.element-four{
+    justify-self: start; /*cuando hablamos de un estilo aplicar en los elementos debemos aplicar este o justify-self:*/
+}
+.element-five{
+    justify-self: center;
+}
+.element-six{
+    justify-self: end;
+}
+
 .grid >div{
     background: #ecf0f1;
     padding: 1em;
